@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana


object User
object LoginMenu
object MainMenu
object Film
object Serie
object Kategori
object List
object Fejl
object UserName
object PassWord
object LoginInformation

Class Action {

}

package "util" {
class FileIO{
+ ArrayList<String> readUserData(String path)
+ void saveData(ArrayList<User> users, String path)
+ String[] readMovieData(String path, int length).
}

class TextUI{
- Scanner scanner
+ void displayMsg(String s)
+ int promptNumeric(String msg)
+ String promptText(String msg)
+ int promptChoice(String msg, ArrayList<String> list)
+ boolean promptBinary(String msg )
}
}



MainMenu <-- User
MainMenu <-- Film
MainMenu <-- Serie
MainMenu <-- Action
LoginInformation *-- User: has-a
User *-- List: has-a
User *-- UserName: has-a
User *-- PassWord: has-a
Action *-- User: has-a
'Kategori *-- HovedMenu: has-a
LoginMenu *-- MainMenu
LoginInformation *-- LoginMenu: has

List <|-- Kategori : is - a
List <|-- Film: is - a
List <|-- Serie: is - a
Kategori *-- Film: has-a
Kategori *-- Serie: has-a

'Action'
List <|-- Action
Action <|-- Se : is - a
Action <|-- Gem : is - a
Action <|-- Slet : is - a

@enduml